--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Little Lemon</title>
+    <title>Mangata and Gallo</title>
     <link href="bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Little Lemon is a Mediterranean restaurant in Chicago offering fresh and authentic cuisine."
+      content="Mangata and Gallo offers luxury jewelry for engagements, weddings, and anniversaries. Based in Austin, Texas."
     />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -20,15 +19,15 @@
     <header class="header">
       <div class="logo">
         <img
-          src="./images/logo-medium.png"
-          alt="Little Lemon Logo"
+          src="./images/mangata-logo.png"
+          alt="Mangata and Gallo Logo"
           class="logo-medium"
         />
       </div>
       <nav class="nav">
         <ul class="nav-list">
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="#menu">Menu</a></li>
+          <li><a href="#collection">Collection</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -39,100 +38,97 @@
         <a href="#">
           <img
             src="./images/banner.jpg"
-            alt="Special Offer Banner"
+            alt="Luxury Jewelry Banner"
             class="banner-img"
           />
         </a>
         <div class="sliding-banner">
-          <div class="banner-text"
-            >Taste Summer on a Plate! Enjoy 20% Off Our Fresh Mediterranean
-            Salads – This Week Only ! Now Serving: Falafel Fiesta – Bursting
-            with Flavor, Fresh from the Garden! A Rustic Mediterranean
-            Experience Awaits – Reserve Your Table Today! "Fresh. Authentic.
-            Mediterranean. Welcome to Little Lemon!" "Hungry? Order Online and
-            Get a Free Appetizer with Your First Meal!"
+          <div class="banner-text">
+            "Elegance Crafted for Every Moment — Discover Mangata & Gallo’s
+            Signature Wedding Rings." "Unveil Timeless Beauty — Explore Our
+            Anniversary Collection." "Artistry in Every Diamond — Handcrafted by
+            Mariana’s Atelier."
           </div>
         </div>
       </section>
 
-      <h2 id="menu-title">Our Menu</h2>
-      <section class="cards" id="menu">
+      <h2 id="menu-title">Our Collection</h2>
+      <section class="cards" id="collection">
         <article class="card">
           <img
-            src="./images/falafel.jpg"
-            alt="Falafel Food Image"
-            class="card-img"
-          />
-          <div class="card-content">
-            <h2 class="card-title">Falafel <span class="badge">New</span></h2>
-            <h6 class="card-subtitle">Price : $12.00</h6>
-            <p>Chickpea, herbs, spices.</p>
-          </div>
-        </article>
-
-        <article class="card">
-          <img
-            src="./images/calamari.jpg"
-            alt="Fried Calamari Food Image"
-            class="card-img"
-          />
-          <div class="card-content">
-            <h2 class="card-title">Fried Calamari</h2>
-            <h6 class="card-subtitle">Price : $12.00</h6>
-            <p>Squid, buttermilk.</p>
-          </div>
-        </article>
-
-        <article class="card">
-          <img
-            src="./images/greekSalad.jpg"
-            alt="Greek Salad Food Image"
+            src="./images/engagement-ring.jpg"
+            alt="Engagement Ring"
             class="card-img"
           />
           <div class="card-content">
             <h2 class="card-title"
-              >Greek Salad <span class="badge">20% Off</span></h2
+              >Engagement Rings <span class="badge">Signature</span></h2
             >
-            <h6 class="card-subtitle">Price : <s>$10.00</s> $8.00</h6>
-            <p>Cucumbers, onion, feta cheese.</p>
+            <h6 class="card-subtitle">From $1,200</h6>
+            <p>Custom-cut diamonds with platinum or gold bands.</p>
+          </div>
+        </article>
+
+        <article class="card">
+          <img
+            src="./images/wedding-band.jpg"
+            alt="Wedding Bands"
+            class="card-img"
+          />
+          <div class="card-content">
+            <h2 class="card-title">Wedding Bands</h2>
+            <h6 class="card-subtitle">From $850</h6>
+            <p>Elegant designs for him and her, handcrafted in Austin.</p>
+          </div>
+        </article>
+
+        <article class="card">
+          <img
+            src="./images/anniversary.jpg"
+            alt="Anniversary Jewelry"
+            class="card-img"
+          />
+          <div class="card-content">
+            <h2 class="card-title"
+              >Anniversary Jewelry <span class="badge">New</span></h2
+            >
+            <h6 class="card-subtitle">From $500</h6>
+            <p>Elegant pieces to mark a lifetime of love.</p>
           </div>
         </article>
       </section>
+
       <div class="cta">
-        <p class="cta-tagline">Skip the line – enjoy your favorites faster!</p>
-        <button class="order-btn">Order Online</button>
+        <p class="cta-tagline"
+          >Make Your Moment Eternal — Book a Consultation Now</p
+        >
+        <button class="order-btn">Book Appointment</button>
       </div>
 
       <section id="about">
         <img
-          src="./images/logo_small.png"
-          alt="Little Lemon Logo"
+          src="./images/mangata-logo.png"
+          alt="Mangata and Gallo Small Logo"
           class="logo-small"
         />
         <div class="about-container">
-          <h2>About Little Lemon</h2>
+          <h2>About Mangata & Gallo</h2>
           <p>
-            Based in <strong>Chicago, Illinois</strong>,
-            <strong>Little Lemon</strong> is a family-owned Mediterranean
-            restaurant known for its blend of traditional recipes served with a
-            modern twist. The chefs draw inspiration from
-            <strong>Italian</strong>, <strong>Greek</strong>, and
-            <strong>Turkish</strong> cuisines, offering a curated seasonal menu
-            of 12–15 dishes that highlight fresh, bold flavors.
+            Founded by <strong>Mariana</strong>, a diamond-cutting and
+            metal-smithing specialist, Mangata and Gallo brings timeless design
+            to Austin and the world. Each piece is meticulously crafted with
+            passion and precision.
           </p>
           <p>
-            The restaurant provides a
-            <strong>rustic and relaxed atmosphere</strong> at
-            <strong>moderate prices</strong>, making it a popular destination
-            for any time of the day—from casual lunches to cozy dinners.
+            Operating both <strong>online</strong> and in a boutique storefront
+            with an atelier in <strong>Austin, Texas</strong>, Mangata and Gallo
+            caters to life's most precious moments — from
+            <strong>engagements</strong> to <strong>anniversaries</strong>.
           </p>
           <p>
-            Founded by two Italian brothers, <strong>Mario</strong> and
-            <strong>Adrian</strong>, Little Lemon reflects their shared passion
-            for food and hospitality. Mario, the head chef, brings his
-            experience from Italy and family recipes to the kitchen, while
-            Adrian leads the restaurant’s marketing and expansion into broader
-            Mediterranean fare.
+            With a growing team of artisans and a fresh presence on
+            <strong>social media</strong>, Mariana continues to shape the future
+            of luxury jewelry — one handcrafted piece at a time.
           </p>
         </div>
       </section>
@@ -140,17 +136,18 @@
       <section class="banner">
         <a href="#">
           <img
-            src="./images/banner-bottom.jpg"
-            alt="Special Offer Banner"
+            src="./images/mangata-logo.png"
+            alt="Mangata & Gallo Footer Banner"
             class="banner-img"
           />
         </a>
       </section>
+
       <section id="contact" class="contact-section">
         <h2>Contact Us</h2>
         <p
-          >We’d love to hear from you! Reach out to us with any questions,
-          feedback, or reservations.</p
+          >Have a question or want to schedule a design consultation? We're here
+          for you.</p
         >
         <form class="contact-form">
           <label for="name">Name:</label>
@@ -160,6 +157,7 @@
             name="name"
             placeholder="Your name"
             required
+            autocomplete="name"
           />
 
           <label for="email">Email:</label>
@@ -169,6 +167,7 @@
             name="email"
             placeholder="you@example.com"
             required
+            autocomplete="email"
           />
 
           <label for="message">Message:</label>
@@ -178,6 +177,7 @@
             rows="4"
             placeholder="Your message..."
             required
+            autocomplete="off"
           ></textarea>
 
           <button type="submit" class="contact-btn">Send Message</button>
@@ -188,24 +188,23 @@
     <footer class="footer">
       <div class="footer-left">
         <img
-          src="./images/logo_banner.png"
-          alt="Little Lemon Small Logo"
+          src="./images/mangata-logo-footer.png"
+          alt="Mangata and Gallo Footer Logo"
           class="footer-logo"
         />
       </div>
       <div class="footer-right">
-        <p
-          >By continuing past this page, you agree to our Terms of Service,
+        <p>
+          By continuing past this page, you agree to our Terms of Service,
           Cookie Policy, Privacy Policy and Content Policies. All trademarks are
-          properties of their respective owners. &copy; 2025 Little Lemon. All
-          rights reserved.</p
-        >
+          properties of their respective owners. All content &copy; 2025 Mangata
+          and Gallo. Crafted with elegance in Austin, TX.
+        </p>
         <div class="footer-links">
-          <p>Social links</p>
-          <a href="#" class="fa fa-youtube"></a>
+          <p>Follow us</p>
           <a href="#" class="fa fa-instagram"></a>
           <a href="#" class="fa fa-pinterest"></a>
-          <a href="#" class="fa fa-snapchat-ghost"></a>
+          <a href="#" class="fa fa-facebook"></a>
         </div>
       </div>
     </footer>
